# fast_api_sqlalchemy_postgres

./: main.py  pyproject.toml
fast_api_postgresql/: database.py  models.py
tests/: test_fast_api_postgresql.py
