[tool.poetry]
name = "fast_api_postgresql"
version = "0.1.0"
description = ""
authors = ["nikolai <nikolai@buzzni.com>"]

[tool.poetry.dependencies]
python = "^3.7"
binary = "^1.0.0"
psycopg2-binary = "^2.8.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
